--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -7,16 +7,33 @@
     android:layout_margin="4dp">
 
 
-    <ImageView
-        android:id="@+id/movieImage"
+    <FrameLayout
+        android:id="@+id/imageLayout"
         android:layout_width="108dp"
         android:layout_height="162dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/testimage" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/movieImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/testimage" />
+
+        <ImageView
+            android:id="@+id/movieFavorite"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_save"/>
+
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/movieName"
@@ -26,7 +43,7 @@
         android:layout_marginTop="15dp"
         android:paddingTop="8dp"
         android:layout_marginEnd="4dp"
-        app:layout_constraintStart_toEndOf="@id/movieImage"
+        app:layout_constraintStart_toEndOf="@id/imageLayout"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="InceptionInceptionInceptionInceptionInceptionInceptionInceptionInception" />
 
@@ -36,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
-        app:layout_constraintStart_toEndOf="@id/movieImage"
+        app:layout_constraintStart_toEndOf="@id/imageLayout"
         app:layout_constraintTop_toBottomOf="@id/movieName"
         tools:text="2010" />
 
@@ -46,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
-        app:layout_constraintStart_toEndOf="@id/movieImage"
+        app:layout_constraintStart_toEndOf="@id/imageLayout"
         app:layout_constraintTop_toBottomOf="@id/movieReleaseDate"
         android:src="@drawable/ic_full_star"
         android:visibility="invisible"/>
@@ -85,10 +102,11 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         tools:text="Action, Adventure, Sci-Fi"
-        app:layout_constraintStart_toEndOf="@id/movieImage"
+        app:layout_constraintStart_toEndOf="@id/imageLayout"
         app:layout_constraintTop_toBottomOf="@id/ratingStar"
         android:textAlignment="viewStart"
         />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
